refactor：优化模板和字体相关配置与接口
- 模板列表改为按创建时间降序排序
- 模板默认配置参数移至 system.yaml，支持配置化
- 字体列表接口支持名称模糊匹配和类型筛选
- 删除检查字体名称接口，功能由列表接口替代